--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Profile</title>
+		<title>Minhas_Rahman</title>
+		<link rel="icon" href="images/screen.jpg" >
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,19 +33,23 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>12+ Years of exposure and expertise in enterprise web development <br>
+					<h2>12+ Years of experience and expertise in enterprise web development <br>
 						using oracle technologies.  
 					</h2>
 				</header>
 			</section>
-                 <CENTER class="content"><H3>Achievements and Awards</H3></CENTER>
+			<BR>
+				<Br>
+
+				 <CENTER class="content"><H2><u>Achievements and Awards</u></H2>
+				 </CENTER>
 		<!-- Two -->
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 						<div class="content">
-							<h3>Certificate Of recognition in November 2018</h3>
+							<h3>Certificate Of Achievement in November 2018</h3>
 							<p>Successfully Migratrated legacy system to new Oracle ERP system.</p>
 						</div>
 					</section>
@@ -56,28 +61,21 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Spot Award in Jul 2016</h3>
-							<p>For client configuration and setup for digital marketing attribution</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image"><img src="images/pic04.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Star of the month award in Aug 2015</h3>
 							<p>Designed and developed the datamodel and pl/sql code for retail website </p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image"><img src="images/pic05.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Best performance award  in Aug 2013</h3>
 							<p>Developed Administrative tool to apply user security privileges  </p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image"><img src="images/pic06.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Best performance award in Aug 2012 </h3>
 							<p>Timely completion of data migration and designing server monitoring system   </p>
